--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 
     <!--Navbar-->
     <nav id="navbar">
+
         <h1 class="logo">
             HBT
         </h1>
@@ -23,8 +24,22 @@
             <li><a href="#about">About</a></li>
             <li><a href="#contact">Contact</a></li>
         </ul>
+        </div>
 
     </nav>
+
+    <!--Section Header-->
+
+    <section id="header">
+        <div class="container">
+            <h1><span class="text-primary">Enjoy</span> Your Stay</h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta nostrum atque maiores officiis facere laborum.
+            </p>
+            <ul style="list-style-type:none;">
+                <li><a href="#aboutOurHotel">About Our Hotel</a></li>
+            </ul>
+        </div>
+    </section>
 </body>
 
 </html>
