--- a/index.html
+++ b/index.html
@@ -40,6 +40,23 @@
             </ul>
         </div>
     </section>
+
+    <section id="history">
+        <div class="items">
+            <div class="image">
+
+            </div>
+            <div class="container">
+                <h1><span class="text-primary">Enjoy</span> Your Stay</h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta nostrum atque maiores officiis facere laborum.
+                </p>
+                <ul style="list-style-type:none;">
+                    <li><a href="#aboutOurHotel">About Our Hotel</a></li>
+                </ul>
+            </div>
+        </div>
+
+    </section>
 </body>
 
 </html>
