added history succesfully

--- a/index.html
+++ b/index.html
@@ -44,14 +44,14 @@
     <section id="history">
         <div class="items">
             <div class="image">
-
+                <h1></h1>
             </div>
             <div class="container">
-                <h1><span class="text-primary">Enjoy</span> Your Stay</h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta nostrum atque maiores officiis facere laborum.
+                <h1><span class="text-primary">The History</span> Of Our Hotel</h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta nostrum atque maiores officiis facere laborum. Dolor sit amet consectetur adipisicing elit. Dicta nostrum atque maiores officiis facere laborum.
                 </p>
                 <ul style="list-style-type:none;">
-                    <li><a href="#aboutOurHotel">About Our Hotel</a></li>
+                    <li><a href="#aboutOurHotel">Read More</a></li>
                 </ul>
             </div>
         </div>
