added section benefits

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 
 <head>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
@@ -41,6 +42,8 @@
         </div>
     </section>
 
+    <!--Section History-->
+
     <section id="history">
         <div class="items">
             <div class="image">
@@ -56,6 +59,31 @@
             </div>
         </div>
 
+    </section>
+
+    <!--Section Benefits-->
+
+    <section id="benefits">
+        <div class="items">
+            <div class="location">
+
+                <i class="material-icons">favorite</i>
+                <h2><strong>Great Location</strong></h2>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ut, omnis?</p>
+            </div>
+            <div class="meals">
+
+                <i class="material-icons">favorite</i>
+                <h2><strong> Free Meals</strong></h2>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ut, omnis?</p>
+            </div>
+            <div class="fitness">
+
+                <i class="material-icons">favorite</i>
+                <h2><strong>Fitness Room</strong> </h2>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ut, omnis?</p>
+            </div>
+        </div>
     </section>
 </body>
 
