added footer, about.html and contact.html

--- a/index.html
+++ b/index.html
@@ -84,7 +84,16 @@
                 <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ut, omnis?</p>
             </div>
         </div>
+
     </section>
+
+    <!--Section Footer-->
+
+    <footer id="main-footer">
+        <div class="container">
+            <p>Copyright &copy; 2019, Lyubomir Nikov, All Rights Reserved </p>
+        </div>
+    </footer>
 </body>
 
 </html>
