--- a/index.html
+++ b/index.html
@@ -14,17 +14,17 @@
 
     <!--Navbar-->
     <nav id="navbar">
-
-        <h1 class="logo">
-            HBT
-        </h1>
-        <ul>
-            <div class="firstElement">
-                <li><a href="#home">Home</a></li>
-            </div>
-            <li><a href="#about">About</a></li>
-            <li><a href="#contact">Contact</a></li>
-        </ul>
+        <div class="container">
+            <h1 class="logo">
+                HBT
+            </h1>
+            <ul>
+                <div class="firstElement">
+                    <li><a href="#home">Home</a></li>
+                </div>
+                <li><a href="#about">About</a></li>
+                <li><a href="#contact">Contact</a></li>
+            </ul>
         </div>
 
     </nav>
