--- a/about.html
+++ b/about.html
@@ -39,13 +39,36 @@
             <div class="text">
                 <h1><span class="text-primary">About</span> Hotel BT</h1>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem veritatis illo, similique labore voluptate nulla animi dolorum eius laborum illum, nesciunt quod reprehenderit dicta autem vel nobis minima sit deleniti!
-                    <br> Lorem ipsum dolor sit amet consectetur adipisicing elit. A velit voluptatem impedit voluptate. Doloribus, voluptas dolore! Cupiditate aliquid sequi deserunt.</p>
+                    <br><br> Lorem ipsum dolor sit amet consectetur adipisicing elit. A velit voluptatem impedit voluptate. Doloribus, voluptas dolore! Cupiditate aliquid sequi deserunt. Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias quia
+                    doloremque, impedit maiores natus facere. Nesciunt libero corrupti est explicabo repellat sunt totam odit neque? Sunt accusamus eum aut optio?</p>
             </div>
-            <div class="image"></div>
+            <div class="image">
+
+            </div>
         </div>
 
     </section>
 
+    <!--Section Guests-->
+
+    <section id="guests">
+        <div class="containerG">
+            <div class="textGuest">
+                <h1>What Our Guests Say</h1>
+            </div>
+            <div class="guest1">
+                <div class="img"></div>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam eligendi quibusdam, dolorum maxime cum numquam quisquam, deleniti eum incidunt, velit non consectetur. Facere, ipsa maxime, ullam id amet odio laboriosam sit iusto tempore
+                    fugit exercitationem, a dolore quo maiores nisi!</p>
+            </div>
+            <div class="guest1">
+                <div class="img"></div>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam eligendi quibusdam, dolorum maxime cum numquam quisquam, deleniti eum incidunt, velit non consectetur. Facere, ipsa maxime, ullam id amet odio laboriosam sit iusto tempore
+                    fugit exercitationem, a dolore quo maiores nisi!</p>
+            </div>
+        </div>
+
+    </section>
 
 
 
