--- a/about.html
+++ b/about.html
@@ -21,9 +21,9 @@
             </h1>
             <ul>
                 <div class="firstElement">
-                    <li><a href="#home">Home</a></li>
+                    <li><a href="index.html">Home</a></li>
                 </div>
-                <li><a href="#about">About</a></li>
+                <li><a href="#about" id="aboutH">About</a></li>
                 <li><a href="#contact">Contact</a></li>
             </ul>
 
@@ -43,7 +43,7 @@
                     doloremque, impedit maiores natus facere. Nesciunt libero corrupti est explicabo repellat sunt totam odit neque? Sunt accusamus eum aut optio?</p>
             </div>
             <div class="image">
-
+                <img src="../img/photo-2.jpg" id="image">
             </div>
         </div>
 
@@ -57,12 +57,12 @@
                 <h1>What Our Guests Say</h1>
             </div>
             <div class="guest1">
-                <div class="img"></div>
+                <div class="img"><img src="../img/person-1.jpg" id="image"></div>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam eligendi quibusdam, dolorum maxime cum numquam quisquam, deleniti eum incidunt, velit non consectetur. Facere, ipsa maxime, ullam id amet odio laboriosam sit iusto tempore
                     fugit exercitationem, a dolore quo maiores nisi!</p>
             </div>
             <div class="guest1">
-                <div class="img"></div>
+                <div class="img1"><img src="../img/person-2.jpg" id="image"></div>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam eligendi quibusdam, dolorum maxime cum numquam quisquam, deleniti eum incidunt, velit non consectetur. Facere, ipsa maxime, ullam id amet odio laboriosam sit iusto tempore
                     fugit exercitationem, a dolore quo maiores nisi!</p>
             </div>
@@ -71,12 +71,12 @@
     </section>
 
 
-
-
-
-
     <!--Section Footer-->
-
+    <footer id="main-footer">
+        <div class="container">
+            <p>Copyright &copy; 2019, Lyubomir Nikov, All Rights Reserved </p>
+        </div>
+    </footer>
 
 </body>
 
