--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <div class="firstElement">
                     <li><a href="#home">Home</a></li>
                 </div>
-                <li><a href="#about">About</a></li>
+                <li><a href="about.html">About</a></li>
                 <li><a href="#contact">Contact</a></li>
             </ul>
         </div>
