added contact page

--- a/about.html
+++ b/about.html
@@ -2,6 +2,7 @@
 <html lang="en">
 
 <head>
+    <link href="https://fonts.googleapis.com/css?family=Amiri|Cinzel&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -19,12 +20,12 @@
             <h1 class="logo">
                 HBT
             </h1>
-            <ul>
+            <ul class="ul">
                 <div class="firstElement">
                     <li><a href="index.html">Home</a></li>
                 </div>
-                <li><a href="#about" id="aboutH">About</a></li>
-                <li><a href="#contact">Contact</a></li>
+                <li><a href="" class="aboutH">About</a></li>
+                <li><a href="contact.html">Contact</a></li>
             </ul>
 
         </div>
