--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 
 <head>
+    <link href="https://fonts.googleapis.com/css?family=Amiri|Cinzel&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -20,10 +21,10 @@
             </h1>
             <ul>
                 <div class="firstElement">
-                    <li><a href="#home">Home</a></li>
+                    <li><a href="">Home</a></li>
                 </div>
                 <li><a href="about.html">About</a></li>
-                <li><a href="#contact">Contact</a></li>
+                <li><a href="contact.html">Contact</a></li>
             </ul>
         </div>
 
@@ -37,7 +38,7 @@
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta nostrum atque maiores officiis facere laborum.
             </p>
             <ul style="list-style-type:none;">
-                <li><a href="#aboutOurHotel">About Our Hotel</a></li>
+                <li><a href="about.html">About Our Hotel</a></li>
             </ul>
         </div>
     </section>
