--- a/contact.html
+++ b/contact.html
@@ -2,12 +2,13 @@
 <html lang="en">
 
 <head>
+    <link href="https://fonts.googleapis.com/css?family=Amiri|Cinzel&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Contact</title>
-    <link rel="stylesheet" href="css/style.css">
+
     <link rel="stylesheet" href="css/styleContact.css">
 </head>
 
@@ -19,12 +20,12 @@
             <h1 class="logo">
                 HBT
             </h1>
-            <ul>
+            <ul class="ul">
                 <div class="firstElement">
-                    <li><a href="#home">Home</a></li>
+                    <li><a href="index.html">Home</a></li>
                 </div>
                 <li><a href="about.html">About</a></li>
-                <li><a href="#contact">Contact</a></li>
+                <li><a href="#" class="contactH">Contact</a></li>
             </ul>
         </div>
 
@@ -34,13 +35,13 @@
 
     <section id="contact">
         <div class="container">
-            <h1><span>Contact</span> Us</h1>
+            <h1><span class="text-primary">Contact</span> Us</h1>
             <p>Please fill out the form below to contact us</p>
             <label>Name <br><input type="text"></label>
             <br>
             <label>Email<br><input type="email"></label>
             <p>Message</p>
-            <textarea rows="4" cols="50" name="comment" form="usrform">Enter text here</textarea>
+            <textarea rows="4" cols="50" name="comment" form="usrform"></textarea>
             <li><a href="#submit">Submit</a></li>
 
         </div>
@@ -56,17 +57,23 @@
             </div>
             <div>
                 <i class="material-icons">favorite</i>
-                <h2>Location</h2>
-                <p>50 Main st, Boston MA</p>
+                <h2>Phone Number</h2>
+                <p>(617) 555-5555</p>
             </div>
             <div>
                 <i class="material-icons">favorite</i>
-                <h2>Location</h2>
-                <p>50 Main st, Boston MA</p>
+                <h2>Email Address</h2>
+                <p>frontdesk@hotelbt.co</p>
             </div>
         </div>
 
     </section>
+
+    <footer id="main-footer">
+        <div class="container">
+            <p>Copyright &copy; 2019, Lyubomir Nikov, All Rights Reserved </p>
+        </div>
+    </footer>
 </body>
 
 </html>
