--- a/index.html
+++ b/index.html
@@ -57,8 +57,10 @@
             </div>
             <div class="container">
                 <h1><span class="text-primary">The History</span> Of Our Hotel</h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta nostrum atque maiores officiis facere laborum. Dolor sit amet consectetur adipisicing elit. Dicta nostrum atque maiores officiis facere laborum.
-                </p>
+                <div class="text">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta nostrum atque maiores officiis facere laborum. Dolor sit amet consectetur adipisicing elit. Dicta nostrum atque maiores officiis facere laborum.
+                    </p>
+                </div>
                 <ul style="list-style-type:none;">
                     <li><a href="#aboutOurHotel">Read More</a></li>
                 </ul>
