--- a/about.html
+++ b/about.html
@@ -10,6 +10,7 @@
     <title>About</title>
 
     <link rel="stylesheet" href="css/styleAbout.css">
+    <link rel="stylesheet" media="screen and (max-width: 768px)" href="css/aboutMobile.css">
 
 </head>
 
@@ -55,9 +56,9 @@
 
     <section id="guests">
         <div class="containerG">
-            <div class="textGuest">
-                <h1>What Our Guests Say</h1>
-            </div>
+
+            <h1>What Our Guests Say</h1>
+
             <div class="guest1">
                 <div class="img"><img src="../img/person-1.jpg" id="image"></div>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam eligendi quibusdam, dolorum maxime cum numquam quisquam, deleniti eum incidunt, velit non consectetur. Facere, ipsa maxime, ullam id amet odio laboriosam sit iusto tempore
