added responsive contact form

--- a/contact.html
+++ b/contact.html
@@ -10,6 +10,7 @@
     <title>Contact</title>
 
     <link rel="stylesheet" href="css/styleContact.css">
+    <link rel="stylesheet" media="screen and (max-width: 768px)" href="css/contactResponsive.css">
 </head>
 
 <body>
@@ -37,10 +38,10 @@
         <div class="container">
             <h1><span class="text-primary">Contact</span> Us</h1>
             <p>Please fill out the form below to contact us</p>
-            <label>Name <br><input type="text"></label>
+            <label>Name <br><input type="text" class="input"></label>
             <br>
-            <label>Email<br><input type="email"></label>
-            <p>Message</p>
+            <label>Email<br><input type="email" class="input"></label>
+            <label>Message</label>
             <textarea rows="4" cols="50" name="comment" form="usrform"></textarea>
             <li><a href="#submit">Submit</a></li>
 
